# rosHandIA

./: README.md  venv.bash
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/roshandia_pkg/lib/roshandia_pkg/: connectHand  handRead01  joinStatePublisher  joinStatePublisherSim
install/roshandia_pkg/share/roshandia_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/roshandia_pkg/share/roshandia_pkg/launch/: display.launch.py  launcher.launch.py  spawn_robot.launch.py  spawn_world.launch.py
install/roshandia_pkg/share/roshandia_pkg/rviz/: rviz2.rviz
install/roshandia_pkg/share/roshandia_pkg/rviz2/: config.rviz  my_config.rviz  rviz2.rviz
install/roshandmsg_pkg/share/roshandmsg_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/handesp/: platformio.ini
src/handesp/src/: main.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/rosHandIa_pkg/share/rosHandIa_pkg/: package.xml
src/log/: latest_build
src/roshandia_pkg/: setup.cfg  setup.py
src/roshandia_pkg/config/: bridge_config.yaml
src/roshandia_pkg/launch/: display.launch.py  publish_urdf.launch.py  start_world.launch.py
src/roshandia_pkg/roshandia_pkg/: handPyReader.py  handRead01.py  joinStatePublisher.py
src/roshandia_pkg/urdf/: hand.urdf
src/roshandia_pkg/urdf/mesh/: arm.stl  finger3.stl  finger4.stl  hand.stl
src/roshandmsg_pkg/: CMakeLists.txt
src/roshandmsg_pkg/msg/: MsgHand.msg
(+48 files in other folders)
